# pyproject-parser

./: .bumpversion.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  docs_test_action.yml  flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  cli.rst  conf.py  contributing.rst  hide_section.py  index.rst  license.rst  local_extension.py  requirements.txt
doc-source/api/: classes.rst  cli.rst  parsers.rst  pyproject-parser.rst  type_hints.rst  utils.rst
pyproject_parser/: __init__.py  __main__.py  classes.py  cli.py  parsers.py  type_hints.py  utils.py
pyproject_parser/cli/: __init__.py  _json_encoders.py
tests/: conftest.py  example_configs.py  requirements.txt  test_classes.py  test_cli.py  test_cli_module.py  test_config.py  test_dumping.py  test_pyproject_class.py  test_utils.py
tests/test_cli_/: test_check_error_caught_author_comma_.txt  test_check_error_caught_bad_name_.txt  test_check_error_caught_bad_requires_python_.txt  test_check_error_caught_bad_version_.txt  test_check_error_caught_build_system_.txt  test_check_error_caught_project_.txt  test_check_error_caught_top_level_.txt  test_check_error_caught_top_level_typo_caps_.txt  test_check_error_caught_top_level_typo_underscore_.txt  test_check_extra_deprecation_duplicate_extra_1_.txt  test_check_extra_deprecation_duplicate_extra_2_.txt  test_check_extra_deprecation_duplicate_extra_3_.txt  test_check_extra_deprecation_warning_duplicate_extra_1_.txt  test_check_extra_deprecation_warning_duplicate_extra_3_.txt  test_info_0_build_system_.json  test_info_0_first_author_.json  test_info_0_project_.json  test_info_0_project_authors_.json  test_info_0_project_urls_Source_Code_.md  test_info_2_all_.json  test_info_2_all_.yml  test_info_2_build_system_.json  test_info_2_build_system_requires_.json  test_info_2_first_author_.json  test_info_2_project_.json  test_info_2_project_authors_.json  test_info_2_tool_whey_base_classifiers_.json  test_info_2_tool_whey_base_classifiers_.yml  test_info_4_all_.json  test_info_4_build_system_.json  test_info_4_build_system_requires_.json  test_info_4_first_author_.json  test_info_4_first_build_requirement_.md  test_info_4_project_.json  test_info_4_project_authors_.json  test_info_4_tool_whey_base_classifiers_.json  test_info_None_all_.json  test_info_None_build_system_requires_.json  test_info_None_build_system_requires_.yml  test_info_None_tool_whey_base_classifiers_.json  (+41 more)
tests/test_cli_module_/: test_traceback_handler_BadConfigError_.txt  test_traceback_handler_FileExistsError_.txt  test_traceback_handler_FileNotFoundError_.txt  test_traceback_handler_KeyError_.txt  test_traceback_handler_NameError_.txt  test_traceback_handler_SyntaxError_.txt  test_traceback_handler_TypeError_.txt  test_traceback_handler_ValueError_.txt
tests/test_config_/: test_buildsystem_normalize.yml  test_buildsystem_normalize_keep_dot.yml  test_buildsystem_parser_valid_config_backend_path_False_.yml  test_buildsystem_parser_valid_config_backend_paths_True_.yml  test_buildsystem_parser_valid_config_complete_False_.yml  test_buildsystem_parser_valid_config_complete_True_.yml  test_buildsystem_parser_valid_config_requires_nothing_.yml  test_buildsystem_parser_valid_config_requires_nothing_True_.yml  test_buildsystem_parser_valid_config_requires_setuptools_.yml  test_buildsystem_parser_valid_config_requires_setuptools_True_.yml  test_buildsystem_parser_valid_config_requires_whey_.yml  test_buildsystem_parser_valid_config_requires_whey_True_.yml  test_buildsystem_unnormalized.yml  test_custom_pyproject_class_COMPLETE_B_.yml  test_dependency_groups_parser_valid_config_full_example_False_.yml  test_dependency_groups_parser_valid_config_one_group_False_.yml  test_pep621_class_valid_config_COMPLETE_A_True_.yml  test_pep621_class_valid_config_COMPLETE_PROJECT_A_True_.yml  test_pep621_class_valid_config_authors_True_.yml  test_pep621_class_valid_config_classifiers_True_.yml  test_pep621_class_valid_config_dependencies_True_.yml  test_pep621_class_valid_config_description_True_.yml  test_pep621_class_valid_config_entry_points_True_.yml  test_pep621_class_valid_config_keywords_True_.yml  test_pep621_class_valid_config_license_LICENSE_.yml  test_pep621_class_valid_config_license_LICENSE_md_.yml  test_pep621_class_valid_config_license_LICENSE_rst_.yml  test_pep621_class_valid_config_license_dict.yml  test_pep621_class_valid_config_maintainers_True_.yml  test_pep621_class_valid_config_minimal_True_.yml  test_pep621_class_valid_config_optional_dependencies_True_.yml  test_pep621_class_valid_config_optional_dependencies_empty_group_False_.yml  test_pep621_class_valid_config_optional_dependencies_empty_group_True_.yml  test_pep621_class_valid_config_optional_dependencies_hyphen_False_.yml  test_pep621_class_valid_config_optional_dependencies_hyphen_True_.yml  test_pep621_class_valid_config_pep639_and_or_False_.yml  test_pep621_class_valid_config_pep639_and_or_True_.yml  test_pep621_class_valid_config_pep639_custom_False_.yml  test_pep621_class_valid_config_pep639_custom_True_.yml  test_pep621_class_valid_config_pep639_files_1_False_.yml  (+32 more)
tests/test_dumping_/: test_dumps_COMPLETE_B_.toml  test_dumps_COMPLETE_PROJECT_A_.toml  test_dumps_PEP639_FILES_.toml  test_dumps_dependency_groups_.toml  test_dumps_readme_dict_text_.toml  test_dumps_readme_string_.toml  test_reformat_COMPLETE_A_WITH_FILES_.toml  test_reformat_COMPLETE_UNDERSCORE_NAME_.toml  test_reformat_UNORDERED_.toml
tests/test_pyproject_class_/: test_custom_pyproject_class_COMPLETE_A_.yml  test_custom_pyproject_class_COMPLETE_B_.yml  test_custom_pyproject_class_COMPLETE_PROJECT_A_.yml  test_valid_config_COMPLETE_A_.yml  test_valid_config_COMPLETE_B_.yml  test_valid_config_backend_path_.yml  (+39 more)
(+2 files in other folders)
