[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "pyproject-parser"
version = "0.2.3"
description = "Parser for 'pyproject.toml'"
readme = "README.rst"
keywords = [ "metadata", "packaging", "pep518", "pep621", "pyproject", "toml",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/pyproject-parser"
"Issue Tracker" = "https://github.com/repo-helper/pyproject-parser/issues"
"Source Code" = "https://github.com/repo-helper/pyproject-parser"
Documentation = "https://pyproject-parser.readthedocs.io/en/latest"

[project.scripts]
pyproject-parser = "pyproject_parser.__main__:main"
check-pyproject = "pyproject_parser.__main__:main"
pyproject-fmt = "pyproject_parser.__main__:main"

[project.optional-dependencies]
readme = [ "docutils==0.16", "readme-renderer[md]>=27.0",]
cli = [ "click>=7.1.2", "consolekit>=1.1.2",]
all = [ "click>=7.1.2", "consolekit>=1.1.2", "docutils==0.16", "readme-renderer[md]>=27.0",]

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"
license-key = "MIT"
package = "pyproject_parser"

[tool.sphinx-pyproject]
github_username = "repo-helper"
github_repository = "pyproject-parser"
author = "Dominic Davis-Foster"
project = "pyproject-parser"
copyright = "2021 Dominic Davis-Foster"
language = "en"
package_root = "pyproject_parser"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.httpdomain",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "sphinxemoji.sphinxemoji",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinxcontrib.toctree_plus",
    "sphinx_debuginfo",
    "seed_intersphinx_mapping",
    "sphinx_click",
    "attr_utils.autoattrs",
    "sphinx_toolbox.pre_commit",
    "sphinx_toolbox_experimental.html_section",
    "sphinx_toolbox_experimental.autosummary_widths",
    "sphinx_toolbox_experimental.peps",
    "sphinx_toolbox_experimental.succinct_seealso",
]
sphinxemoji_style = "twemoji"
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "furo"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[tool.dep_checker.name_mapping]
attrs = "attr"
