[build-system]
requires = [ "setuptools!=61.*,>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "pyproject-parser"
version = "0.7.0"
description = "Parser for 'pyproject.toml'"
readme = "README.rst"
requires-python = ">=3.6.1"
keywords = [ "metadata", "packaging", "pep518", "pep621", "pyproject", "toml",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Typing :: Typed",
]
dynamic = [ "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/pyproject-parser"
"Issue Tracker" = "https://github.com/repo-helper/pyproject-parser/issues"
"Source Code" = "https://github.com/repo-helper/pyproject-parser"
Documentation = "https://pyproject-parser.readthedocs.io/en/latest"

[project.scripts]
pyproject-parser = "pyproject_parser.__main__:main"
check-pyproject = "pyproject_parser.__main__:check"
pyproject-fmt = "pyproject_parser.__main__:reformat"
pyproject-info = "pyproject_parser.__main__:info"

[project.optional-dependencies]
readme = [ "docutils==0.16", "readme-renderer[md]>=27.0",]
cli = [ "click>=7.1.2", "consolekit>=1.4.1", "sdjson>=0.3.1",]
all = [
    "click>=7.1.2",
    "consolekit>=1.4.1",
    "docutils==0.16",
    "readme-renderer[md]>=27.0",
    "sdjson>=0.3.1",
]

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"
license-key = "MIT"
package = "pyproject_parser"

[tool.sphinx-pyproject]
github_username = "repo-helper"
github_repository = "pyproject-parser"
author = "Dominic Davis-Foster"
project = "pyproject-parser"
copyright = "2021 Dominic Davis-Foster"
language = "en"
package_root = "pyproject_parser"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinxcontrib.toctree_plus",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "sphinxemoji.sphinxemoji",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinx_debuginfo",
    "sphinx_licenseinfo",
    "seed_intersphinx_mapping",
    "html_section",
    "sphinx_click",
    "attr_utils.autoattrs",
    "sphinx_toolbox.pre_commit",
    "sphinx_toolbox.more_autosummary.column_widths",
    "sphinx_packaging.peps",
    "sphinx_packaging.toml",
    "sphinx_toolbox.latex.succinct_seealso",
    "sphinx_toolbox_experimental.missing_xref",
    "local_extension",
]
sphinxemoji_style = "twemoji"
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "furo"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
html_codeblock_linenos_style = "table"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "pyproject_parser"

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
plugins = [ "attr_utils.mypy_plugin",]
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.dep_checker.name_mapping]
attrs = "attr"

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.dependency-dash."doc-source/requirements.txt"]
order = 30
include = false

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
